almost ready to turn in. Making sure I don't delete stuff

--- a/assignments/05/Makefile
+++ b/assignments/05/Makefile
@@ -2,7 +2,7 @@
 ## Filename: Makefile
 ## Assignment 5: Cinco  
 
-EXECTUTABLE=Cinco
+EXECTUTABLE=p5
 STANDARD=-std=c++11
 #FILE1=IntSet
 MAIN=Cinco
